--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
-    "clsx": "^2.1.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
